--- a/app/views/case/schedule.html
+++ b/app/views/case/schedule.html
@@ -2,6 +2,24 @@
 {% set title = 'Schedule' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 
+{% block beforeContent %}
+{{ govukBreadcrumbs({
+  items: [
+    {
+      text: "Cases",
+      href: "/cases"
+    },
+    {
+      text: case.serviceUserPersonalDetails.name,
+      href: "/cases/" + CRN
+    },
+    {
+      text: title
+    }
+  ]
+}) }}
+{% endblock %}
+
 {% block content %}
 
 {% include "case/_case-service-user-banner.html" %}
