--- a/app/views/case/address-book-professional.html
+++ b/app/views/case/address-book-professional.html
@@ -2,21 +2,26 @@
 {% set title = 'Address book' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 
-{% block content %}
-
-{% include "case/_case-service-user-banner.html" %}
-
-{{ govukBackLink({
-  text: "Back to personal details",
-  href: "/cases/" + CRN + "/details"
+{% block beforeContent %}
+{{ govukBreadcrumbs({
+  items: [
+    {
+      text: "Cases",
+      href: "/cases"
+    },
+    {
+      text: case.serviceUserPersonalDetails.name,
+      href: "/cases/" + CRN
+    },
+    {
+      text: title
+    }
+  ]
 }) }}
+{% endblock %}
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-7">{{ title }}</h1>
-  </div>
-</div>
-
+{% block content %}
+<h1 class="govuk-heading-xl">{{ title }}</h1>
 
 <div class="govuk-tabs" data-module="govuk-tabs">
   <div class="app-case-updates">
