--- a/app/views/case/flags.html
+++ b/app/views/case/flags.html
@@ -27,49 +27,13 @@
 {% set currentNavSection = 'flags' %}
 {% include "case/_case-nav.html" %}
 
-<!-- Alerts, Safeguarding, Public protection, Information -->
-
-    <h1 class="govuk-heading-l">{{ title }}</h1>
-    {% set categoryHtml %}
-      {{ govukSummaryList({
-        rows: [
-          {
-            key: {
-              html: govukTag({ text: 'Alerts', classes: 'govuk-tag--pink' })
-            },
-            value: {
-              text: "Description of alerts, for example Weapons or Serious group offending"
-            }
-          },
-          {
-            key: {
-              html: govukTag({ text: 'Safeguarding', classes: 'govuk-tag--turquoise' })
-            },
-            value: {
-              text: "Description of safeguarding, for example Victim or Vulnerable"
-            }
-          },
-          {
-            key: {
-              html: govukTag({ text: 'Public protection', classes: 'govuk-tag--purple' })
-            },
-            value: {
-              text: "Description of public protection, for example Domestic abuse"
-            }
-          },
-          {
-            key: {
-              html: govukTag({ text: 'Information', classes: 'govuk-tag--grey' })
-            },
-            value: {
-              text: "Description of information, for example Integrated Offender Management (IOM)"
-            }
-          }
-        ]
-      }) }}
-    {% endset %}
-
-
+<h1 class="govuk-heading-l">{{ title }}</h1>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <p>Risk flags (registrations) show circumstances that need prominent and constant visibility.</p>
+    <p>Review flags regularly, and remove them when they are longer appropriate.</p>
+  </div>
+</div>
 
 <p>
   {{ govukButton({
@@ -79,7 +43,46 @@
   }) }}
 </p>
 
-<h2 class="govuk-heading-m govuk-!-margin-bottom-2">Current flags</h2>
+<h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Current flags</h2>
+
+{% set categoryHtml %}
+  {{ govukSummaryList({
+    rows: [
+      {
+        key: {
+          html: govukTag({ text: 'Alerts', classes: 'govuk-tag--pink' })
+        },
+        value: {
+          text: "Description of alerts, for example Weapons or Serious group offending"
+        }
+      },
+      {
+        key: {
+          html: govukTag({ text: 'Safeguarding', classes: 'govuk-tag--turquoise' })
+        },
+        value: {
+          text: "Description of safeguarding, for example Victim or Vulnerable"
+        }
+      },
+      {
+        key: {
+          html: govukTag({ text: 'Public protection', classes: 'govuk-tag--purple' })
+        },
+        value: {
+          text: "Description of public protection, for example Domestic abuse"
+        }
+      },
+      {
+        key: {
+          html: govukTag({ text: 'Information', classes: 'govuk-tag--grey' })
+        },
+        value: {
+          text: "Description of information, for example Integrated Offender Management (IOM)"
+        }
+      }
+    ]
+  }) }}
+{% endset %}
 {{ govukDetails({
   summaryText: "Risk flag categories",
   html: categoryHtml
@@ -109,7 +112,7 @@
   </tbody>
 </table>
 
-<h2 class="govuk-heading-m">Historic flags</h2>
+<h2 class="govuk-heading-m govuk-!-font-size-27">Historic flags</h2>
 <table class="govuk-table">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
