--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -31,6 +31,7 @@
 {% from "govuk/components/warning-text/macro.njk"        import govukWarningText %}
 
 {% from "_components/warning-banner/macro.njk"           import appWarningBanner %}
+{% from "_components/risk-flag/macro.njk"           import appRiskFlag %}
 
 {% block head %}
   {% include "includes/head.html" %}
