--- a/app/views/case/_case-nav.html
+++ b/app/views/case/_case-nav.html
@@ -46,10 +46,10 @@
         </li>
         <li class="moj-sub-navigation__item">
           <a class="moj-sub-navigation__link govuk-link--no-visited-state"
-            {% if currentNavSection == 'breach' %}
+            {% if currentNavSection == 'compliance' %}
             aria-current="page"
             {% endif %}
-            href="/cases/{{ CRN }}/breach">Breach</a>
+            href="/cases/{{ CRN }}/compliance">Compliance</a>
         </li>
       </ul>
     </nav>
