--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -32,6 +32,7 @@
 
 {% from "_components/warning-banner/macro.njk"           import appWarningBanner %}
 {% from "_components/risk-flag/macro.njk"                import appRiskFlag %}
+{% from "_components/summary-card/macro.njk"             import appSummaryCard %}
 
 {% block head %}
   {% include "includes/head.html" %}
