Add sketches for different failure to comply states
- no failures
- 1 failure
- 2 failures (breach not started)
- 2 failures (breach in progress)
- Breach resolved, no new failures
- Breach unproven

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -110,40 +110,33 @@ $govuk-assets-path: '/govuk/assets/';
 }
 
 .app-compliance-panel {
-  padding: govuk-spacing(4);
-  background-color: govuk-colour('light-grey');
+  padding: govuk-spacing(3);
+  color: govuk-colour("white");
+  background: govuk-colour("dark-grey");
 
-  p, ul, li, h2, h3 {
+  p, ul, li, h2, h3, a {
     color: inherit;
-  }
-
-  .note-panel {
-    border: 2px solid govuk-colour("black");
-    border-width: 0 0 0 2px;
   }
 }
 
 .app-compliance-panel--red {
-  color: govuk-colour("white");
   background: govuk-colour("red");
+}
 
-  a {
-    color: inherit;
-  }
+.app-compliance-panel--green {
+  background: govuk-colour("green");
+}
 
-  .note-panel {
-    background: none;
-    border: 2px solid govuk-colour("white");
-    border-width: 0 0 0 2px;
-    display: none;
-  }
+.app-compliance-panel--blue {
+  background: govuk-colour("blue");
 }
 
 .app-compliance-panel--orange {
-  color: govuk-colour("white");
   background: govuk-colour("orange");
-
-  a {
-    color: inherit;
-  }
 }
+
+.app-summary-card--compliance {
+  border-bottom-width: 0;
+}
+
+// .app-summary-card--compliance-last {}
