--- a/app/views/case/compliance-warning.html
+++ b/app/views/case/compliance-warning.html
@@ -37,14 +37,13 @@
 
 <div class="govuk-grid-row govuk-!-margin-top-6">
   <div class="govuk-grid-column-two-thirds">
-
     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-6">
       Community Order
       <div class="govuk-!-font-size-19 govuk-!-margin-top-1 govuk-!-font-weight-regular">Using violence to secure entry - 19563</div>
     </h2>
 
-    <div class="app-compliance-panel app-compliance-panel--red">
-      <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">2 failures to comply within 12 months – <a href="#">Start a breach</a></p>
+    <div class="app-compliance-panel">
+      <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">1 failure to comply within 12 months</p>
     </div>
     {% set orderDetailsList %}
       {{ govukSummaryList({
@@ -99,7 +98,7 @@
               text: 'Complied'
             },
             value: {
-              html: '<a href="#">16 complied</a>'
+              html: '<a href="#">17 complied</a>'
             }
           },
           {
@@ -108,11 +107,7 @@
             },
             value: {
               html: '
-                <p>2 failures to comply:</p>
-                <ul class="govuk-list govuk-!-margin-top-2">
-                  <li><a href="#">1 failure to attend</a></li>
-                  <li><a href="#">1 failure to comply because of behaviour</a></li>
-                </ul>
+                <a href="#">1 failure to attend</a>
               '
             }
           },
