Use real case data for current order on compliance page

--- a/app/views/case/compliance.html
+++ b/app/views/case/compliance.html
@@ -37,103 +37,7 @@
 
 <div class="govuk-grid-row govuk-!-margin-top-6">
   <div class="govuk-grid-column-two-thirds">
-
-    <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-6">
-      Community Order
-      <div class="govuk-!-font-size-19 govuk-!-margin-top-1 govuk-!-font-weight-regular">Using violence to secure entry - 19563</div>
-    </h2>
-
-    <div class="app-compliance-panel app-compliance-panel--red">
-      <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">2 failures to comply within 12 months – <a href="#">Start a breach</a></p>
-    </div>
-    {% set orderDetailsList %}
-      {{ govukSummaryList({
-        rows: [
-          {
-            key: {
-              text: 'Start date'
-            },
-            value: {
-              html: '5 January 2021'
-            }
-          },
-          {
-            key: {
-              text: 'Length'
-            },
-            value: {
-              html: '12 months'
-            }
-          },
-          {
-            key: {
-              text: 'Breaches'
-            },
-            value: {
-              html: 'None'
-            }
-          }
-        ]
-      }) }}
-    {% endset %}
-
-    {{ appSummaryCard({
-      classes: "app-summary-card--compliance",
-      titleText: "Order details",
-      html: orderDetailsList
-    }) }}
-
-    {% set rarList %}
-      {{ govukSummaryList({
-        rows: [
-          {
-            key: {
-              text: 'Appointments'
-            },
-            value: {
-              html: '<a href="#">20 appointments</a>'
-            }
-          },
-          {
-            key: {
-              text: 'Complied'
-            },
-            value: {
-              html: '<a href="#">16 complied</a>'
-            }
-          },
-          {
-            key: {
-              html: 'Failures to comply<br>within 12 months'
-            },
-            value: {
-              html: '
-                <p>2 failures to comply:</p>
-                <ul class="govuk-list govuk-!-margin-top-2">
-                  <li><a href="#">1 failure to attend</a></li>
-                  <li><a href="#">1 failure to comply because of behaviour</a></li>
-                </ul>
-              '
-            }
-          },
-          {
-            key: {
-              text: 'Acceptable absences'
-            },
-            value: {
-              html: '<a href="#">2 acceptable absences</a>'
-            }
-          }
-        ]
-      }) }}
-    {% endset %}
-
-    {{ appSummaryCard({
-      classes: "govuk-!-margin-bottom-6 app-summary-card--compliance-last",
-      titleHtml: 'Order requirement<br /><span class="govuk-!-font-weight-bold">20 RAR days</span>',
-      html: rarList
-    }) }}
-
+    {% include 'case/_compliance-current-order.html' %}
     {% include 'case/_compliance-previous-orders.html' %}
   </div>
 </div>
