--- a/app/views/case/activity-log.html
+++ b/app/views/case/activity-log.html
@@ -125,7 +125,7 @@
       {{ hr() | safe }}
       {% if entry.type === 'Appointment' %}
         {% include "case/_appointment-timeline-entry.html" %}
-      {% elseif entry.type in ['Text message', 'Email', 'Phone call', 'Note'] %}
+      {% elseif entry.type in ['Text message', 'Email', 'Phone call', 'Note', 'Document'] %}
         {% include "case/_communication-timeline-entry.html" %}
       {% endif %}
     {% endfor %}
