Use derived numbers not cases data for attendance coutns
Remove old data from cases and generator

--- a/app/views/case/index.html
+++ b/app/views/case/index.html
@@ -275,13 +275,13 @@
     <p class="govuk-body">
       <ul class="govuk-list">
         <li>
-          <span class="govuk-tag govuk-tag--green">{{ case.appointmentStatistics.complied }}</span> Complied
+          <span class="app-!-font-family-tabular-bold govuk-tag govuk-tag--green govuk-!-margin-right-1">{{ compliedAppointments(CRN, data) | length }}</span> Complied
         </li>
         <li>
-          <span class="govuk-tag govuk-tag--green">{{ case.appointmentStatistics.acceptableAbsence }}</span> Acceptable absence
+          <span class="app-!-font-family-tabular-bold govuk-tag govuk-tag--green govuk-!-margin-right-1">{{ acceptableAbsenceAppointments(CRN, data) | length }}</span> Acceptable absence
         </li>
         <li>
-          <span class="govuk-tag govuk-tag--red">{{ case.appointmentStatistics.failureToComply }}</span> Failure to comply
+          <span class="app-!-font-family-tabular-bold govuk-tag govuk-tag--red govuk-!-margin-right-1">{{ allFailureToComplyAppointments(CRN, data) | length }}</span> Failure to comply
         </li>
       </ul>
     </p>
